button shape on iphone fixed

--- a/assets/components/search.css
+++ b/assets/components/search.css
@@ -23,6 +23,7 @@
 }
 
 .secret-search {
+  -webkit-appearance: none;
   left: 18rem;
   background-color: var(--clr-accent);
   color: white;
